@@ -13,7 +13,7 @@ public class AdaptivePageSteps {
 	
 	private native AdaptivePagesStepMap getValues(String json) /*-{
 		var map = {};
-		if (json !== ''&& json !== null && json !== undefined) { 
+		if (json !== '' && json !== null && json !== undefined) { 
 			var parsedJSON = JSON.parse(json);
 			
 			var pagesArray = parsedJSON.pages;
