@@ -5,17 +5,23 @@ import com.google.gwt.core.client.JsArray;
 
 public class AdaptiveStructure {
 	private AdaptiveAdjacencyList adjacencyList;
+	private AdaptivePageInformations pagesInfo;
 	
 	public AdaptiveStructure(String json) {
-		this.adjacencyList = getValues(json);
+		this.adjacencyList = getListValues(json);
+		this.pagesInfo = getPageInfos(json);
 	}
-	
+
 	public JsArray<AdaptiveConnection> getConnectionsForPage(String pageID) {
 		return this.adjacencyList.getConnectionsForPage(pageID);
 	}
 	
-	private native AdaptiveAdjacencyList getValues(String json) /*-{
-		if (json !== '' && json !== null && json !== undefined) { 
+	public String getDifficultyForPage(String pageID) {
+		return this.pagesInfo.getDifficultyDescription(pageID);
+	}
+
+	private native AdaptiveAdjacencyList getListValues(String json) /*-{
+		if (json && json !== '') {
 			var parsedJSON = JSON.parse(json);
 			
 			return parsedJSON.edges;
@@ -23,4 +29,39 @@ public class AdaptiveStructure {
 			return {};
 		}
 	}-*/;
+	
+	private native AdaptivePageInformations getPageInfos(String json) /*-{
+	if (json && json !== '') { 
+		var parsedJSON = JSON.parse(json);
+		
+//ex:	difficulty: {
+//       	"0":"Informative",
+//          "1":"Assessment",
+//          "2":"Easy"
+//      }
+//      pages:[
+//      	{"ID":"PAGE_ID_1","stepID":"STEP_ID_1","pageName":"Page 1","previewURL":"","difficulty":1},
+//          {"ID":"PAGE_ID_2","stepID":"STEP_ID_2","pageName":"Page 2","previewURL":"","difficulty":2},
+//      ]
+		var difficultiesDefinitions = parsedJSON.difficulty;
+		var pagesInfos = parsedJSON.pages;
+
+
+		var adaptivePageInformations = {};
+
+		for (var i = 0; i < pagesInfos.length; i++) {
+			var pageID = pagesInfos[i].ID;
+			var pageDifficulty = pagesInfos[i].difficulty;
+			var pageDifficultyDefinition = difficultiesDefinitions[pageDifficulty];
+			
+			adaptivePageInformations[pageID] = {
+				'difficulty': pageDifficultyDefinition
+			};
+		}
+		
+		return adaptivePageInformations;
+	} else {
+		return {};
+	}
+}-*/;
 }
