@@ -1,5 +1,5 @@
-2018-12-28 Added new properties for ValueChanged event and added method for injecting eventbus for addons
-2018-12-28 Added possibility for creating adaptive lessons
+2019-01-11 Added new properties for ValueChanged event and added method for injecting eventbus for addons
+2019-01-11 Added possibility for creating adaptive lessons
 2019-01-04 Fixed setting player controller in Shape Tracing module
 2019-01-02 Added command isOK to a connection addon
 2018-12-21 Fixed a rerendered mathjax of text module
@@ -7,6 +7,8 @@
 2018-12-17 Fixed ekeyboard paragraph loading on the first page of mCourser
 2018-12-17 Fixed mathjax calls
 2018-12-12 Fixed shape tracing scaling on mobile devices
+2018-12-11 Added new properties for ValueChanged event and added method for injecting eventbus for addons
+2018-12-11 Added possibility for creating adaptive lesson
 2018-12-11 Upgraded tinymce library
 2018-11-28 Fixed media recorder on safari mobile devices and mLibro
 2018-11-28 Fixed reset issue in Shooting Range
